# OpenRGB

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  60-openrgb.rules  99-openrgb.rules  APKBUILD  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  Colors.h  DetectionManager.cpp  DetectionManager.h  Detector.h  DeviceDetector.h  JsonUtils.cpp  JsonUtils.h  LICENSE  LogManager.cpp  LogManager.h  MathUtils.cpp  MathUtils.h  NetworkClient.cpp  NetworkClient.h  NetworkProtocol.cpp  NetworkProtocol.h  NetworkServer.cpp  NetworkServer.h  OpenAuraSDK.cpp  OpenAuraSDK.patch  OpenAuraSDK.pro  OpenAuraSDK.sln  OpenAuraSDK.vcxproj  OpenAuraSDK.vcxproj.filters  OpenAuraSDK_Win.pro  OpenRGB.cpp  OpenRGB.h  OpenRGB.patch  OpenRGB.pro  OpenRGBNetworkPluginInterface.h  (+23 more)
dependencies/hueplusplus/: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Jenkinsfile  README.md  codecov.yml
dependencies/hueplusplus-1.0.0/src/: CMakeLists.txt  EntertainmentMode.cpp  Light.cpp  Scene.cpp  Schedule.cpp  SimpleBrightnessStrategy.cpp  StateTransaction.cpp  ZLLSensors.cpp
dependencies/hueplusplus-1.1.0/: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile
dependencies/hueplusplus-1.1.0/.github/ISSUE_TEMPLATE/: bug_report.md
dependencies/hueplusplus-1.1.0/doc/markdown/: Build.md  Getting_Started.md  Sensors.md
dependencies/hueplusplus-1.1.0/examples/: LightsOff.cpp  Snippets.cpp
dependencies/hueplusplus-1.1.0/include/hueplusplus/: APICache.h  BaseDevice.h  Bridge.h  CLIPSensors.h  ColorHueStrategy.h  Condition.h  EntertainmentMode.h  HueExceptionMacro.h  Rule.h  SensorList.h  SimpleBrightnessStrategy.h  SimpleColorTemperatureStrategy.h  ZLLSensors.h
dependencies/hueplusplus-1.1.0/src/: APICache.cpp  BaseDevice.cpp  Bridge.cpp  CLIPSensors.cpp  ColorUnits.cpp  EntertainmentMode.cpp  Group.cpp  HueCommandAPI.cpp  NewDeviceList.cpp  Sensor.cpp  SimpleColorTemperatureStrategy.cpp  Utils.cpp  WinHttpHandler.cpp
dependencies/hueplusplus-1.1.0/test/: CMakeLists.txt  test_Action.cpp  test_BaseDevice.cpp  test_BridgeConfig.cpp  test_ColorUnits.cpp  test_Light.cpp  test_LightFactory.cpp  test_Main.cpp  test_NewDeviceList.cpp  test_ResourceList.cpp  test_Schedule.cpp  test_SensorImpls.cpp  test_SensorList.cpp  test_SimpleColorHueStrategy.cpp  test_UPnP.cpp
dependencies/hueplusplus-1.1.0/test/mocks/: mock_HttpHandler.h
dependencies/hueplusplus-1.2.0/: .gitmodules  CMakeLists.txt  Doxyfile  README.md  lgtm.yml
dependencies/hueplusplus-1.2.0/.github/: FUNDING.yml
dependencies/hueplusplus-1.2.0/.github/workflows/: build.yml
dependencies/hueplusplus-1.2.0/cmake/: hueplusplus-config.cmake.in
dependencies/hueplusplus-1.2.0/doc/markdown/: Build.md  Mainpage.md  Shared_State.md  Transactions.md
dependencies/hueplusplus-1.2.0/examples/: BridgeSetup.cpp  CMakeLists.txt
dependencies/hueplusplus-1.2.0/include/hueplusplus/: Action.h  BaseDevice.h  BaseHttpHandler.h  Bridge.h  BridgeConfig.h  Condition.h  ExtendedColorHueStrategy.h  ExtendedColorTemperatureStrategy.h  Group.h  HueException.h  IHttpHandler.h  LibConfig.h  Light.h  LinHttpHandler.h  NewDeviceList.h  Scene.h  Sensor.h  StateTransaction.h  Utils.h  WinHttpHandler.h
dependencies/hueplusplus-1.2.0/src/: Action.cpp  BaseDevice.cpp  BaseHttpHandler.cpp  BridgeConfig.cpp  CMakeLists.txt  EntertainmentMode.cpp  ExtendedColorHueStrategy.cpp  Group.cpp  HueDeviceTypes.cpp  Light.cpp  ModelPictures.cpp  Rule.cpp  Scene.cpp  Sensor.cpp  SimpleColorHueStrategy.cpp  TimePattern.cpp
dependencies/hueplusplus-1.2.0/test/: CMakeLists.txt  CMakeLists.txt.in  CodeCoverage.cmake  test_APICache.cpp  test_BaseHttpHandler.cpp  test_Bridge.cpp  test_ColorUnits.cpp  test_ExtendedColorHueStrategy.cpp  test_ExtendedColorTemperatureStrategy.cpp  test_Group.cpp  test_HueCommandAPI.cpp  test_Light.cpp  test_SimpleBrightnessStrategy.cpp  test_SimpleColorHueStrategy.cpp  test_SimpleColorTemperatureStrategy.cpp  test_UPnP.cpp
dependencies/hueplusplus-1.2.0/test/mocks/: mock_BaseHttpHandler.h  mock_HttpHandler.h  mock_Light.h
dependencies/hueplusplus/.github/ISSUE_TEMPLATE/: feature_request.md
dependencies/hueplusplus/doc/markdown/: Mainpage.md
dependencies/hueplusplus/hueplusplus/: BaseHttpHandler.cpp  CMakeLists.txt  ExtendedColorHueStrategy.cpp  ExtendedColorTemperatureStrategy.cpp  Hue.cpp  HueCommandAPI.cpp  HueException.cpp  HueLight.cpp  LinHttpHandler.cpp  SimpleBrightnessStrategy.cpp  SimpleColorHueStrategy.cpp  SimpleColorTemperatureStrategy.cpp  UPnP.cpp  Utils.cpp  WinHttpHandler.cpp
dependencies/hueplusplus/hueplusplus/include/: BaseHttpHandler.h  BrightnessStrategy.h  ColorHueStrategy.h  ColorTemperatureStrategy.h  ExtendedColorHueStrategy.h  ExtendedColorTemperatureStrategy.h  Hue.h  HueCommandAPI.h  HueConfig.h  (+12 more)
dependencies/hueplusplus/src/: APICache.cpp  BaseDevice.cpp  BaseHttpHandler.cpp  Bridge.cpp  BridgeConfig.cpp  CLIPSensors.cpp  CMakeLists.txt  ColorUnits.cpp  EntertainmentMode.cpp  ExtendedColorTemperatureStrategy.cpp  Group.cpp  HueDeviceTypes.cpp  HueException.cpp  Light.cpp  LinHttpHandler.cpp  Scene.cpp  Schedule.cpp  Sensor.cpp  SimpleColorHueStrategy.cpp  StateTransaction.cpp  TimePattern.cpp  UPnP.cpp  WinHttpHandler.cpp  ZLLSensors.cpp
dependencies/hueplusplus/test/: CMakeLists.txt  TestTransaction.h  test_APICache.cpp  test_BaseDevice.cpp  test_Bridge.cpp  test_BridgeConfig.cpp  test_ColorUnits.cpp  test_ExtendedColorHueStrategy.cpp  test_ExtendedColorTemperatureStrategy.cpp  test_Group.cpp  test_HueCommandAPI.cpp  test_Light.cpp  test_LightFactory.cpp  test_ResourceList.cpp  test_Scene.cpp  test_Schedule.cpp  test_Sensor.cpp  test_SensorImpls.cpp  test_SensorList.cpp  test_SimpleBrightnessStrategy.cpp  test_SimpleColorTemperatureStrategy.cpp  test_StateTransaction.cpp
dependencies/rpi_ws281x/: .gitignore  CMakeLists.txt  LICENSE  README.md  SConscript  SConstruct  clk.h  dma.c  dma.h  gpio.h  linux.py  mailbox.c  mailbox.h  main.c  pcm.c  pcm.h  pkg-config.pc.in  pwm.c  pwm.h  rpihw.c  rpihw.h  version.h.in  version.py  ws2811.c  ws2811.h
dependencies/rpi_ws281x/DEBIAN/: control  postinst  postrm  prerm
(+3555 files in other folders)
